// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a ButtonDialog control 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-button-dialog test-class"
    id="ButtonDialog-0"
  >
    <Button
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      errorMessage=""
      focus={false}
      height=""
      iconName="bomb"
      iconStyle=""
      id=""
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Button"
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "inherit",
          "fill": "#ffffff",
          "stroke": "#c0c0c0",
        }
      }
      testing={true}
      theme={null}
      tooltip=""
      top=""
      visible={true}
      width=""
      xcss={null}
    />
    <styled.div
      className="ui-dialog-popup test-class-dialog"
      location="bottom"
      onClick={[Function]}
      visible={false}
    >
      <styled.div
        sizing="normal"
        visible={false}
      >
        <p>
          Dialog test
        </p>
      </styled.div>
      <Styled(Triangle)
        className=""
        direction="up"
        location="bottom"
        nobase={true}
        sizing="normal"
        style={
          Object {
            "fill": undefined,
            "stroke": undefined,
          }
        }
        visible={false}
      />
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test creation of a ButtonDialog control on top 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-button-dialog test-class"
    id="ButtonDialog-0"
  >
    <Button
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      errorMessage=""
      focus={false}
      height=""
      iconName="bomb"
      iconStyle=""
      id=""
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Button"
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "inherit",
          "fill": "#ffffff",
          "stroke": "#c0c0c0",
        }
      }
      testing={true}
      theme={null}
      tooltip=""
      top=""
      visible={true}
      width=""
      xcss={null}
    />
    <styled.div
      className="ui-dialog-popup test-class-dialog"
      location="top"
      onClick={[Function]}
      visible={false}
    >
      <styled.div
        sizing="normal"
        visible={false}
      >
        <p>
          Dialog test
        </p>
      </styled.div>
      <Styled(Triangle)
        className=""
        direction="down"
        location="top"
        nobase={true}
        sizing="normal"
        style={
          Object {
            "fill": undefined,
            "stroke": undefined,
          }
        }
        visible={false}
      />
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test making the ButtonDialog invisible 1`] = `
<ButtonDialog
  className=""
  contentEditable={false}
  dialogClasses={Array []}
  direction="right"
  disabled={false}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  left=""
  location="bottom"
  noedit={false}
  nohover={false}
  noripple={false}
  notriangle={false}
  obj="ButtonDialog"
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  triangleClasses={Array []}
  visible={false}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-button-dialog"
      id="ButtonDialog-0"
    >
      <div
        className="ui-button-dialog sc-htoDjs jlTQqf"
        id="ButtonDialog-0"
      >
        <Button
          className=""
          contentEditable={false}
          direction="right"
          disabled={false}
          errorMessage=""
          focus={false}
          height=""
          iconName="bomb"
          iconStyle=""
          id=""
          left=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Button"
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={
            Object {
              "backgroundColor": "inherit",
              "color": "inherit",
              "fill": "#ffffff",
              "stroke": "#c0c0c0",
            }
          }
          testing={true}
          theme={null}
          tooltip=""
          top=""
          visible={false}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "selectedBackgroundColor": "#1f8a70",
                "selectedForegroundColor": "#ffe11a",
                "tooltipBackgroundColor": "#708090",
                "tooltipForegroundColor": "#ffffff",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.div
              className="ui-button ripple"
              disabled={false}
              id="Button-0"
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "inherit",
                  "color": "inherit",
                  "fill": "#ffffff",
                  "stroke": "#c0c0c0",
                }
              }
              visible={false}
            >
              <div
                className="ui-button ripple sc-EHOje dsqkWk"
                disabled={false}
                id="Button-0"
                onClick={[Function]}
                style={
                  Object {
                    "backgroundColor": "inherit",
                    "color": "inherit",
                    "fill": "#ffffff",
                    "stroke": "#c0c0c0",
                  }
                }
              >
                <Icon
                  className=""
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  errorMessage=""
                  focus={false}
                  height=""
                  iconName="bomb"
                  id=""
                  imageFile=""
                  left=""
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  obj="Icon"
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  theme={null}
                  tooltip=""
                  top=""
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <ThemeProvider
                    theme={
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#c0c0c0",
                        "color": "#000000",
                        "headerBackgroundColor": "#004358",
                        "headerForegroundColor": "#ffffff",
                        "headerHoverColor": "#ffe11a",
                        "hoverColor": "#c0c0c0",
                        "inputBorderColor": "#c0c0c0",
                        "selectedBackgroundColor": "#1f8a70",
                        "selectedForegroundColor": "#ffe11a",
                        "tooltipBackgroundColor": "#708090",
                        "tooltipForegroundColor": "#ffffff",
                        "transitionDelay": "0.5s",
                      }
                    }
                  >
                    <styled.i
                      className="ui-icon fa fa-fw fa-bomb"
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      errorMessage=""
                      focus={false}
                      height=""
                      iconName="bomb"
                      id=""
                      imageFile=""
                      left=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      obj="Icon"
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      tooltip=""
                      top=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <i
                        className="ui-icon fa fa-fw fa-bomb sc-bdVaJa rkmGs"
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        height=""
                        id=""
                        selected={false}
                        style={Object {}}
                        width=""
                      />
                    </styled.i>
                  </ThemeProvider>
                </Icon>
              </div>
            </styled.div>
          </ThemeProvider>
        </Button>
        <styled.div
          className="ui-dialog-popup"
          location="bottom"
          onClick={[Function]}
          visible={false}
        >
          <div
            className="ui-dialog-popup sc-gzVnrw fhWeba"
            onClick={[Function]}
          >
            <styled.div
              sizing="normal"
              visible={false}
            >
              <div
                className="sc-bZQynM hYjOL"
              >
                <p>
                  Dialog test
                </p>
              </div>
            </styled.div>
            <Styled(Triangle)
              className=""
              direction="up"
              location="bottom"
              nobase={true}
              sizing="normal"
              style={
                Object {
                  "fill": undefined,
                  "stroke": undefined,
                }
              }
              visible={false}
            >
              <Triangle
                className="sc-dnqmqq eWzkPV"
                contentEditable={false}
                direction="up"
                disabled={false}
                errorMessage=""
                focus={false}
                height=""
                id=""
                left=""
                location="bottom"
                nobase={true}
                noedit={false}
                nohover={false}
                noripple={false}
                obj="Triangle"
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "fill": undefined,
                    "stroke": undefined,
                  }
                }
                testing={true}
                theme={null}
                tooltip=""
                top=""
                visible={false}
                width=""
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#c0c0c0",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "selectedBackgroundColor": "#1f8a70",
                      "selectedForegroundColor": "#ffe11a",
                      "tooltipBackgroundColor": "#708090",
                      "tooltipForegroundColor": "#ffffff",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <Triangle__SVGView
                    className="ui-triangle sc-dnqmqq eWzkPV"
                    contentEditable={false}
                    direction="up"
                    disabled={false}
                    errorMessage=""
                    focus={false}
                    height=""
                    id=""
                    left=""
                    location="bottom"
                    nobase={true}
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    obj="Triangle"
                    preserveAspectRatio="xMidYMid meet"
                    selected={false}
                    sizing="normal"
                    style={
                      Object {
                        "fill": undefined,
                        "stokeWidth": "2px",
                        "stroke": undefined,
                      }
                    }
                    testing={true}
                    theme={null}
                    tooltip=""
                    top=""
                    version="1.1"
                    viewBox="0 0 40 40"
                    visible={false}
                    width=""
                    xcss={null}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      className="ui-triangle sc-dnqmqq eWzkPV Triangle__SVGView-bGJaTC kCZOgc"
                      contentEditable={false}
                      direction="up"
                      disabled={false}
                      height=""
                      id=""
                      preserveAspectRatio="xMidYMid meet"
                      selected={false}
                      style={
                        Object {
                          "fill": undefined,
                          "stokeWidth": "2px",
                          "stroke": undefined,
                        }
                      }
                      version="1.1"
                      viewBox="0 0 40 40"
                      width=""
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <polygon
                        points="-3,35, 20,10 43,35"
                        style={
                          Object {
                            "stroke": "none",
                          }
                        }
                      />
                      <polygon
                        points="-3,35, 20,10 43,35, 20,10"
                        style={
                          Object {
                            "strokeLinecap": "square",
                            "strokeWidth": undefined,
                          }
                        }
                      />
                    </svg>
                  </Triangle__SVGView>
                </ThemeProvider>
              </Triangle>
            </Styled(Triangle)>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</ButtonDialog>
`;

exports[`Test retrieval of ButtonDialog props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "dialogClasses": Array [],
  "direction": "right",
  "disabled": false,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "iconStyle": "",
  "id": "",
  "left": "",
  "location": "bottom",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notriangle": false,
  "obj": "ButtonDialog",
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "backgroundColor": "inherit",
    "color": "inherit",
  },
  "testing": true,
  "theme": null,
  "tooltip": "",
  "top": "",
  "triangleClasses": Array [],
  "visible": true,
  "width": "",
  "xcss": null,
}
`;

exports[`Test the disabling of the ButtonDialog control 1`] = `
<ButtonDialog
  className=""
  contentEditable={false}
  dialogClasses={Array []}
  direction="right"
  disabled={true}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  left=""
  location="bottom"
  noedit={false}
  nohover={false}
  noripple={false}
  notriangle={false}
  obj="ButtonDialog"
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  triangleClasses={Array []}
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-button-dialog"
      id="ButtonDialog-0"
    >
      <div
        className="ui-button-dialog sc-htoDjs jlTQqf"
        id="ButtonDialog-0"
      >
        <Button
          className=""
          contentEditable={false}
          direction="right"
          disabled={true}
          errorMessage=""
          focus={false}
          height=""
          iconName="bomb"
          iconStyle=""
          id=""
          left=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          obj="Button"
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={
            Object {
              "backgroundColor": "inherit",
              "color": "inherit",
              "fill": "#ffffff",
              "stroke": "#c0c0c0",
            }
          }
          testing={true}
          theme={null}
          tooltip=""
          top=""
          visible={true}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#c0c0c0",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "selectedBackgroundColor": "#1f8a70",
                "selectedForegroundColor": "#ffe11a",
                "tooltipBackgroundColor": "#708090",
                "tooltipForegroundColor": "#ffffff",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.div
              className="ui-button nohover"
              disabled={true}
              id="Button-0"
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "inherit",
                  "color": "inherit",
                  "fill": "#ffffff",
                  "stroke": "#c0c0c0",
                }
              }
              visible={true}
            >
              <div
                className="ui-button nohover sc-EHOje kiuasi"
                disabled={true}
                id="Button-0"
                onClick={[Function]}
                style={
                  Object {
                    "backgroundColor": "inherit",
                    "color": "inherit",
                    "fill": "#ffffff",
                    "stroke": "#c0c0c0",
                  }
                }
              >
                <Icon
                  className=""
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  errorMessage=""
                  focus={false}
                  height=""
                  iconName="bomb"
                  id=""
                  imageFile=""
                  left=""
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  obj="Icon"
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  theme={null}
                  tooltip=""
                  top=""
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <ThemeProvider
                    theme={
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#c0c0c0",
                        "color": "#000000",
                        "headerBackgroundColor": "#004358",
                        "headerForegroundColor": "#ffffff",
                        "headerHoverColor": "#ffe11a",
                        "hoverColor": "#c0c0c0",
                        "inputBorderColor": "#c0c0c0",
                        "selectedBackgroundColor": "#1f8a70",
                        "selectedForegroundColor": "#ffe11a",
                        "tooltipBackgroundColor": "#708090",
                        "tooltipForegroundColor": "#ffffff",
                        "transitionDelay": "0.5s",
                      }
                    }
                  >
                    <styled.i
                      className="ui-icon fa fa-fw fa-bomb"
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      errorMessage=""
                      focus={false}
                      height=""
                      iconName="bomb"
                      id=""
                      imageFile=""
                      left=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      obj="Icon"
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      tooltip=""
                      top=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <i
                        className="ui-icon fa fa-fw fa-bomb sc-bdVaJa rkmGs"
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        height=""
                        id=""
                        selected={false}
                        style={Object {}}
                        width=""
                      />
                    </styled.i>
                  </ThemeProvider>
                </Icon>
              </div>
            </styled.div>
          </ThemeProvider>
        </Button>
        <styled.div
          className="ui-dialog-popup"
          location="bottom"
          onClick={[Function]}
          visible={false}
        >
          <div
            className="ui-dialog-popup sc-gzVnrw fhWeba"
            onClick={[Function]}
          >
            <styled.div
              sizing="normal"
              visible={false}
            >
              <div
                className="sc-bZQynM hYjOL"
              >
                <p>
                  Dialog test
                </p>
              </div>
            </styled.div>
            <Styled(Triangle)
              className=""
              direction="up"
              location="bottom"
              nobase={true}
              sizing="normal"
              style={
                Object {
                  "fill": undefined,
                  "stroke": undefined,
                }
              }
              visible={false}
            >
              <Triangle
                className="sc-dnqmqq eWzkPV"
                contentEditable={false}
                direction="up"
                disabled={false}
                errorMessage=""
                focus={false}
                height=""
                id=""
                left=""
                location="bottom"
                nobase={true}
                noedit={false}
                nohover={false}
                noripple={false}
                obj="Triangle"
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "fill": undefined,
                    "stroke": undefined,
                  }
                }
                testing={true}
                theme={null}
                tooltip=""
                top=""
                visible={false}
                width=""
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#c0c0c0",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "selectedBackgroundColor": "#1f8a70",
                      "selectedForegroundColor": "#ffe11a",
                      "tooltipBackgroundColor": "#708090",
                      "tooltipForegroundColor": "#ffffff",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <Triangle__SVGView
                    className="ui-triangle sc-dnqmqq eWzkPV"
                    contentEditable={false}
                    direction="up"
                    disabled={false}
                    errorMessage=""
                    focus={false}
                    height=""
                    id=""
                    left=""
                    location="bottom"
                    nobase={true}
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    obj="Triangle"
                    preserveAspectRatio="xMidYMid meet"
                    selected={false}
                    sizing="normal"
                    style={
                      Object {
                        "fill": undefined,
                        "stokeWidth": "2px",
                        "stroke": undefined,
                      }
                    }
                    testing={true}
                    theme={null}
                    tooltip=""
                    top=""
                    version="1.1"
                    viewBox="0 0 40 40"
                    visible={false}
                    width=""
                    xcss={null}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      className="ui-triangle sc-dnqmqq eWzkPV Triangle__SVGView-bGJaTC kCZOgc"
                      contentEditable={false}
                      direction="up"
                      disabled={false}
                      height=""
                      id=""
                      preserveAspectRatio="xMidYMid meet"
                      selected={false}
                      style={
                        Object {
                          "fill": undefined,
                          "stokeWidth": "2px",
                          "stroke": undefined,
                        }
                      }
                      version="1.1"
                      viewBox="0 0 40 40"
                      width=""
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <polygon
                        points="-3,35, 20,10 43,35"
                        style={
                          Object {
                            "stroke": "none",
                          }
                        }
                      />
                      <polygon
                        points="-3,35, 20,10 43,35, 20,10"
                        style={
                          Object {
                            "strokeLinecap": "square",
                            "strokeWidth": undefined,
                          }
                        }
                      />
                    </svg>
                  </Triangle__SVGView>
                </ThemeProvider>
              </Triangle>
            </Styled(Triangle)>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</ButtonDialog>
`;
